--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 <title>Listado completo</title>
 <meta content='Ayudamos 24 hrs' property='og:description'/>
-<meta content='https://i.imgur.com/46su01K.png' property='og:image'/>
+<meta content='https://i.imgur.com/BEOlwbQ.jpg' property='og:image'/>
 <img src="//whos.amung.us/pingjs/?k=negro70&amp;t=&amp;x=Bellas"style="display:none">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
